<resources>
    <string name="app_name">ICCT PASS APP</string>
    <string name="icct_pass_app">ICCT PASS APP</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="address_e_g_cainta_rizal">Address: e.g. Cainta, Rizal</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact no.</string>
    <string name="year_level">Year Level</string>
    <string name="student_no">Student no.</string>
    <string name="course">Course</string>
    <string name="section">Section</string>
    <string name="full_name">Full Name</string>
    <string name="create_event">Create Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_location">Event Location</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="subject_code">Subject Code</string>
    <string name="class_name">Class Name</string>
    <string name="create_classroom">Create Classroom</string>
    <string name="login">LOGIN</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="password">Password</string>
    <string name="submit">SUBMIT</string>
    <string name="daily_visitors">Daily Visitors</string>
    <string name="room_name">Room Name</string>
</resources>