<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NinthActivity">

    <include layout ="@layout/appbar"
        />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:textSize="16sp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/section"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/section"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/fullname"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/course"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/course"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/section"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/student_no"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/student_no"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/course"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/year_level"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/year_level"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/student_no"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/contactno"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/contact_no"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/year_level"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/contactno"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/address_e_g_cainta_rizal"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/btn_generate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/generate_qr_code"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn2"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botnav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_nav"
        android:layout_alignParentBottom="true" />

</RelativeLayout>