<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".TenthActivity">


    <TextView
        android:id="@+id/ce_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_event"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:textSize="16sp"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_location"
        android:textSize="16sp"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:textSize="16sp"
        android:layout_margin="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn2"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/add"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn2"
            />

    </LinearLayout>

</LinearLayout>