<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/class_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_name"
            android:textColor="@color/black"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/subject_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_code"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section"
            android:textColor="@color/gray"
            android:textSize="16sp" />

    </LinearLayout>


</androidx.cardview.widget.CardView>