<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FifthActivity">

    <!--LOGIN-->

    <FrameLayout
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/blue_bg">

        <TextView
            android:id="@+id/wc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:paddingTop="50sp"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableRightCompat="@drawable/ic_account_circle" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:paddingTop="50dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_header"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="Email"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:text="ewengalamas@gmail.com"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:startIconDrawable="@drawable/ic_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:text="123456"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_btn2"
            android:text="@string/submit"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>